--- a/server/package.json
+++ b/server/package.json
@@ -8,21 +8,21 @@
     },
     "dependencies": {
         "bcryptjs": "^2.1.0",
-        "body-parser": "^1.13.2",
+        "body-parser": "^1.19.1",
         "compression": "^1.6.2",
-        "connect-mongo": "^1.3.2",
+        "connect-mongo": "^4.6.0",
         "ejs": "^2.3.3",
-        "express": "^4.13.0",
+        "express": "^4.17.2",
         "express-jwt": "^3.0.1",
         "express-session": "^1.11.3",
         "jsonwebtoken": "^5.0.2",
         "lodash": "^3.10.0",
-        "moment": "^2.14.1",
-        "mongodb": "^2.1.16",
-        "mongoskin": "^2.1.0",
-        "multer": "^1.3.0",
+        "moment": "^2.29.1",
+        "mongodb": "^4.3.1",
+        "multer": "^1.4.4",
         "nodemailer": "^2.6.0",
         "path": "^0.12.7",
+        "prismjs": "^1.26.0",
         "q": "^1.4.1",
         "request": "^2.58.0",
         "rootpath": "^0.1.2"
@@ -33,8 +33,8 @@
         "gulp-clean-css": "",
         "gulp-concat": "",
         "gulp-less": "",
-        "gulp-plumber": "",
         "gulp-ng-annotate": "",
+        "gulp-plumber": "^1.2.1",
         "gulp-sourcemaps": "",
         "gulp-uglify": "",
         "yargs": "^4.6.0"
